--- a/index.html
+++ b/index.html
@@ -47,9 +47,8 @@
  </tr>
  <tr>
  <td colspan="3">
-<!-- www.DarmowyLicznik.pl -->
-<div class="image-rotator"><div class="rotator-slide" id="rotator-slide-1"><a href="https://www.darmowylicznik.pl/" title="Przejdź na stronę licznika" target="_blank"><img src="https://www.darmowylicznik.pl/licznik.php?id=147876" alt="Darmowy licznik odwiedzin" style="border:0px;" /></a></div></div>
-<!-- END www.DarmowyLicznik.pl -->
+ <a href='http://www.counterliczniki.com'>http://www.counterliczniki.com</a> <script type='text/javascript' src='https://www.counterliczniki.com/auth.php?id=7ce9579cbe53d3a3958ddf1b4c3a53bf6bf4a0cf'></script>
+<script type="text/javascript" src="https://www.counterliczniki.com/pl/home/counter/1269260/t/2"></script>
  </td>
  </tr>
  </table>
