--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
  </tr>
  <tr>
  <td colspan="3">
- <a href='http://www.counterliczniki.com'>http://www.counterliczniki.com</a> <script type='text/javascript' src='https://www.counterliczniki.com/auth.php?id=7ce9579cbe53d3a3958ddf1b4c3a53bf6bf4a0cf'></script>
+ <a align=center href='http://www.counterliczniki.com'>http://www.counterliczniki.com</a> <script type='text/javascript' src='https://www.counterliczniki.com/auth.php?id=7ce9579cbe53d3a3958ddf1b4c3a53bf6bf4a0cf'></script>
 <script type="text/javascript" src="https://www.counterliczniki.com/pl/home/counter/1269260/t/2"></script>
  </td>
  </tr>
