--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
  <head>
-  <link rel="shortcut icon" href="logo_pustovoit.png">
+  <link rel="shortcut icon" href="icon.png">
  <meta charset="utf-8">
  </head>
 <body>
