--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
  </tr>
  <tr>
  <td colspan="3">
- <a align=center href='http://www.counterliczniki.com'>http://www.counterliczniki.com</a> <script type='text/javascript' src='https://www.counterliczniki.com/auth.php?id=7ce9579cbe53d3a3958ddf1b4c3a53bf6bf4a0cf'></script>
-<script type="text/javascript" src="https://www.counterliczniki.com/pl/home/counter/1269260/t/2"></script>
+ <a href="https://www.counterliczniki.com/pl/home/stats/id/1269260" target="obszar_glowny">Licznik</a>
  </td>
  </tr>
  </table>
