--- a/glowny_pustovoit.html
+++ b/glowny_pustovoit.html
@@ -13,7 +13,9 @@
 <li>w oparciuna tabele lum ramy </li>
 <li>w oparciu o DIV'y</li>
 <li>w oparciu o o instrukcje HTML5</li>
- <video src="video.mp4">Treść alternatywna</video>
+<video>
+	<source src="video" type='mp4'>
+</video>
 </ol>
 </body>
 </html>
