--- a/glowny_pustovoit.html
+++ b/glowny_pustovoit.html
@@ -13,9 +13,11 @@
 <li>w oparciuna tabele lum ramy </li>
 <li>w oparciu o DIV'y</li>
 <li>w oparciu o o instrukcje HTML5</li>
-<video>
-	<source src="video" type='mp4'>
-</video>
+<video controls width="600">
+        <source src="video.mp4" type="video/mp4">
+        <source src="video.webm" type="video/webm">
+        Ваш браузер не поддерживает элемент <code>video</code>.
+    </video>
 </ol>
 </body>
 </html>
