--- a/glowny_pustovoit.html
+++ b/glowny_pustovoit.html
@@ -15,8 +15,7 @@
 <li>w oparciu o o instrukcje HTML5</li>
 <video controls width="600">
         <source src="video.mp4" type="video/mp4">
-        <source src="video.webm" type="video/webm">
-        Ваш браузер не поддерживает элемент <code>video</code>.
+        <source src="video.webm" type="video/webm"> <code>video</code>.
     </video>
 </ol>
 </body>
