--- a/glowny_pustovoit.html
+++ b/glowny_pustovoit.html
@@ -14,8 +14,8 @@
 <li>w oparciu o DIV'y</li>
 <li>w oparciu o o instrukcje HTML5</li>
 <video controls width="600">
-        <source src="video.mp4" type="video/mp4">
-        <source src="video.webm" type="video/webm"> <code>video</code>.
+        <source src="video2.mp4" type="video/mp4">
+        <source src="video2.webm" type="video/webm"> <code>video</code>.
     </video>
 </ol>
 </body>
